# syrostream-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
syro-sys/: Cargo.toml  build.rs
syro-sys/src/: lib.rs
