[workspace]
resolver = "3"
members = ["syro-sys"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Guilherme Lima <oss@glima31.dev>"]
license = "MIT"

[package]
name = "syrostream"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
syro-sys = { path = "syro-sys" }
thiserror = "2.0.18"

[dev-dependencies]
hound = "3.5.1"
